Update Links. Fix alignment issues.

--- a/style.css
+++ b/style.css
@@ -10,9 +10,8 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #101214;
+    background-color: #000000;
     color: #7A7C80;
-
 }
 
 h2,.white{
@@ -25,7 +24,7 @@ a{
 }
 /* section 1 */
 .section-1{
-    padding-top: 40vh;
+    padding-top: 35vh;
     padding-left: 20vw;
     text-align: center;
 }
@@ -68,11 +67,10 @@ a{
     padding: 5px;
     font-size: 1.2rem;
     padding-left: 0;
-    width: 50%;
 }
 /* animations / utilities */
 .section-2 a:hover{
-    font-size: 1.3rem;
+    padding-left: 1rem;
     color: #fff;
     cursor: pointer;
     transition: 0.2s;
@@ -93,6 +91,7 @@ a{
 @media(max-width:780px){
     .grid-2{
         grid-template-columns: 1fr;
+        margin-bottom: 2rem;    
     }
     .section-1{
         padding:0;
@@ -100,7 +99,8 @@ a{
     }
     .section-2{
         padding: 0;
-        padding-left: 1.5rem;
+        width: 90%;
+        padding-left: 1rem;
         padding-top: 2rem;
     }
 }
